--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.3.3"
+        "phpunit/phpunit": "^9.3.3",
+      "ext-json": "*"
     },
     "autoload": {
         "psr-4": {
